# sushi-on-bela

./: .gitignore  README.md  bela-rt-tuning.sh  build-docker-image.sh  cross-build-bela-project.sh  cross-build-dpf-plugin.sh  cross-build-plugin.sh  cross-build-sushi.sh  setup-bela-sysroot.sh
bela-project/: hellosine-multich.json  input-multich-monitor.json  render.cpp  sushi-config-hellosine.json  sushi-config-passthrough.json
docker/: Dockerfile  meson-aarch64-cross.ini  toolchain-aarch64-elk.cmake
docker/overlay-ports/grpc/: 00001-fix-uwp.patch  00006-utf8-range.patch  portfile.cmake
docker/scripts/: build-dpf-plugin.sh  build-juce-plugin.sh  build-sushi.sh  patch-evl-compat.sh  wsl-build-sushi.sh
docker/triplets/: arm64-elk-linux.cmake
plugins/HelloSine/: CMakeLists.txt  PluginProcessor.cpp
